# Smart_Light

./: .cproject  CMakeLists.txt  add.rar
APPLICATION/: main.c
Debug/: Smart_Light.elf  Smart_Light.hex  Smart_Light.lss  Smart_Light.map  makefile  sources.mk
Debug/APPLICATION/: main.d
Debug/IIC/: subdir.mk
Debug/MCAL/UART/: UART.d
HAL/LDR/: LDR_program.c
